10 February 2011: Wouter
	- Merged with trunk r3115 changes:
		20 January 2011: Wouter
			- Fix on shutdown, then getaddrinfo acquired data uses freeaddrinfo.
		19 January 2011: Wouter
			- Bug #348: no -I/usr and -L/usr for libcrypto in /usr.
		5 January 2011: Matthijs
			- Fix nsdc update and nsdc notify
			- Force outgoing interface to be a single range acl
			- Update documentation about acl options
			- Code review
			- Fix nsdc so it can use hmac-sha* tsigs
			- Bug #347: NSEC3 nodata QTYPE=DS not at delegation mismatch
		4 January 2011: Yuri
			- Doc spelling error, bug#345
		15 December 2010: Wouter
			- fix race condition when nsd is stopped while a reload is in
			  progress, often when rc.d does nsdc patch; nsdc stop in sequence.
			  reload is now signalled to stop too.
		10 December 2010: Matthijs
			- fix bug#306: applied documentation patch
			- fix bug#253: now also for QTYPE=DS.
		12 October 2010: Wouter
			- Fix compilation on SunOS4.
		24 September 2010: Matthijs
			- Bug #328: nsd-checkconf overrun
		1 September 2010: Yuri
			- Support for huge TXT records.
		23 Aug 2010: Wouter
			- fix bug#325: remove stale files from cvs from repo.
		16 Aug 2010: Yuri
			- zonec, MAXRDATALEN check was off by one.
		9 Aug 2010: Matthijs
			- nsdc return 1 outside function, should be exit 1
			- Bug #320: arc4random
		2 Aug 2010: Matthijs
			- Bump to 3.2.7.

21 July 2010: Wouter
	- NUM_RECV_PER_SELECT 100 implemented, configure check if kernel
	  supports this.

20 July 2010: Wouter
	- Branched from trunk. Added radix tree.
	- use -fwhole-program if gcc supports it.

19 July 2010: Matthijs
	- fix bug#314, NSEC next field now correctly escapes spaces.
	  Also fixes label overflow issue.
	- Put back HAVE_SSL.
	- Code reviews.
	- Add donor text.

6 July 2010: Wouter
	- Compiles on Minix 3.1.7; checks ss_family, suseconds_t, some
	  warning fixes.  Needs socketpair to work, e.g.
	  http://wiki.minix3.org/en/SummerOfCode2010/UnixDomainSockets.

2 July 2010: Wouter